kubernetes/supporting-services/grafana/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: grafana-route

spec:
  parentRefs:
    - name: gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: grafana
          port: 3000
